5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1637_2703.log
== TEST (2019-04-05 19:07:21) 
-- CODE:
idade = int(input())
if idade < 18:
	print"eleitor"
else:
	print"nao_eleitor"
-- ERROR:
File "XXXX", line 3
    print"eleitor"
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:07:46) 
-- CODE:
idade = int(input())
if idade < 18:
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:08:03) 
-- CODE:
idade = int(input())
if idade >= 18:
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:08:09) 
-- CODE:
idade = int(input())
if idade >= 18:
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:08:17) 
-- CODE:
idade = int(input())
if idade >= 18:
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:08:26) 
-- CODE:
idade = int(input())
if idade >= 18:
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.136798
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
